--- a/ManagedSolutionBulkRemover/packages.config
+++ b/ManagedSolutionBulkRemover/packages.config
@@ -3,6 +3,7 @@
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net47" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net47" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights" version="2.19.0" targetFramework="net47" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net47" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.42" targetFramework="net47" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.25" targetFramework="net47" />
@@ -25,6 +26,7 @@
   <package id="NuGet.Protocol" version="5.9.1" targetFramework="net47" />
   <package id="NuGet.Versioning" version="5.9.1" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net47" />
   <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.Memory" version="4.5.4" targetFramework="net47" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
