--- a/ManagedSolutionBulkRemover/ManagedSolutionBulkRemover.nuspec
+++ b/ManagedSolutionBulkRemover/ManagedSolutionBulkRemover.nuspec
@@ -1,25 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-  <metadata>
-    <id>ManagedSolutionBulkRemover</id>
-    <version>1.1.0.0</version>
-    <title>Managed Solution Bulk Remover</title>
-    <authors>Maciej Kornacki</authors>
-    <owners>Maciej Kornacki</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover</projectUrl>
-    <iconUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover/raw/main/icon.png</iconUrl>
-    <description>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</description>
-    <summary>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</summary>
-    <releaseNotes>XrmToolbox ManagedSolutionBulkRemover created</releaseNotes>
-    <copyright>Maciej Kornacki</copyright>
-    <tags>XrmToolBox, Dynamics, Managed, Solutions, Remove, Delete, Bulk</tags>
-    <dependencies>
-      <dependency id="XrmToolBox" version="1.2019.11.35" />
-    </dependencies>
-  </metadata>
-  <files>
-	  <file src="bin\Release\ManagedSolutionBulkRemover.dll" target="lib\net47\Plugins\ManagedSolutionBulkRemover.dll" />
-	  <file src="bin\Release\Microsoft.ApplicationInsights.dll" target="lib\net47\Plugins\Microsoft.ApplicationInsights.dll" />
-  </files>
+	<metadata>
+		<id>ManagedSolutionBulkRemover</id>
+		<version>1.1.0.0</version>
+		<title>Managed Solution Bulk Remover</title>
+		<authors>Maciej Kornacki</authors>
+		<owners>Maciej Kornacki</owners>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<projectUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover</projectUrl>
+		<readme>https://raw.githubusercontent.com/mkmk89/ManagedSolutionBulkRemover/main/README.md</readme>
+		<iconUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover/raw/main/icon.png</iconUrl>
+		<description>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</description>
+		<summary>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</summary>
+		<releaseNotes>XrmToolbox ManagedSolutionBulkRemover created</releaseNotes>
+		<copyright>Maciej Kornacki</copyright>
+		<tags>XrmToolBox, Dynamics, Managed, Solutions, Remove, Delete, Bulk</tags>
+		<dependencies>
+			<dependency id="XrmToolBox" version="1.2019.11.35" />
+		</dependencies>
+	</metadata>
+	<files>
+		<file src="bin\Release\ManagedSolutionBulkRemover.dll" target="lib\net47\Plugins\ManagedSolutionBulkRemover.dll" />
+		<file src="bin\Release\Microsoft.ApplicationInsights.dll" target="lib\net47\Plugins\Microsoft.ApplicationInsights.dll" />
+	</files>
 </package>
