--- a/ManagedSolutionBulkRemover/ManagedSolutionBulkRemover.nuspec
+++ b/ManagedSolutionBulkRemover/ManagedSolutionBulkRemover.nuspec
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package>
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata>
 		<id>ManagedSolutionBulkRemover</id>
 		<version>1.1.0.0</version>
@@ -8,7 +8,6 @@
 		<owners>Maciej Kornacki</owners>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<projectUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover</projectUrl>
-		<readme>..\README.md</readme>
 		<iconUrl>https://github.com/mkmk89/ManagedSolutionBulkRemover/raw/main/icon.png</iconUrl>
 		<description>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</description>
 		<summary>This XrmToolbox plugin can delete managed solution in bulk. Select solutions, run the plugin and selected solutions in order which will consider dependencies.</summary>
